# VSS-Joystick

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  INSTALL.md  Makefile  README.md  VSS-Joystick  VSS-Joystick-Debug  configure.sh  install_core.sh  main.cpp  teste
doc/: Doxygen
doc/html/: annotated.html  boost_8h_source.html  classCore-members.html  classCore.html  classCore__coll__graph.map  classCore__coll__graph.md5  classDualshock3-members.html  classDualshock3.html  classDualshock3__coll__graph.map  classDualshock3__coll__graph.md5  classInterface-members.html  classInterface.html  classJoystick-members.html  classJoystick.html  classJoystickEvent-members.html  classJoystickEvent.html  classReaderControlJoy-members.html  classReaderControlJoy.html  classReaderControlJoy__coll__graph.map  classReaderControlJoy__coll__graph.md5  classes.html  classvss__command_1_1Global__Commands-members.html  classvss__command_1_1Global__Commands.html  classvss__command_1_1Robot__Command-members.html  classvss__command_1_1Robot__Command.html  classvss__debug_1_1Global__Debug-members.html  classvss__debug_1_1Global__Debug.html  classvss__debug_1_1Path-members.html  classvss__debug_1_1Path.html  classvss__debug_1_1Pose-members.html  classvss__debug_1_1Pose.html  classvss__state_1_1Ball__State-members.html  classvss__state_1_1Ball__State.html  classvss__state_1_1Global__State-members.html  classvss__state_1_1Global__State.html  classvss__state_1_1Pose-members.html  classvss__state_1_1Pose.html  classvss__state_1_1RGB-members.html  classvss__state_1_1RGB.html  classvss__state_1_1Robot__State-members.html  (+40 more)
doc/html/search/: all_2.js  all_4.js  all_5.js  all_6.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_2.js  classes_4.js  classes_5.js  classes_6.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  variables_7.js  variables_8.js  variables_9.js  variables_a.js  variables_b.js
doc/latex/: annotated.tex  classCore.tex  classCore__coll__graph.md5  classDualshock3.tex  classDualshock3__coll__graph.md5  classInterface.tex  classJoystick.tex  classJoystickEvent.tex  classReaderControlJoy.tex  classReaderControlJoy__coll__graph.md5  classvss__command_1_1Global__Commands.tex  classvss__command_1_1Robot__Command.tex  classvss__debug_1_1Global__Debug.tex  classvss__debug_1_1Path.tex  classvss__debug_1_1Pose.tex  classvss__state_1_1Ball__State.tex  classvss__state_1_1Global__State.tex  classvss__state_1_1Pose.tex  classvss__state_1_1RGB.tex  classvss__state_1_1Robot__State.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_9acc4c3540ef5e6988b4cab0250f2987.tex  dir_a737f280ac159acbe9dd6d23fee201bf.tex  dir_ab2a25814ca8879ea75be2020c7ce9b4.tex  hierarchy.tex  refman.tex  structJoyAxis.tex  structvss__command_1_1StaticDescriptorInitializer__command__2eproto.tex  structvss__debug_1_1StaticDescriptorInitializer__debug__2eproto.tex  structvss__state_1_1StaticDescriptorInitializer__state__2eproto.tex
src/: Boost.h  Commons.h  Core.cpp  Core.h  JoystickReader.cpp  JoystickReader.h  Main.cpp  boost.h  commons.h  core.cpp  core.h  dualshock3.cpp  dualshock3.h  main.cpp  reader_control_joy.cpp  reader_control_joy.h
src/joystick/: build-test.sh  joystick.cc  joystick.hh  test  test.cc
test/: JoyAxisTests.cpp  MainTests.cpp
